# HousingML

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
data/curated/: HousingDataTest.csv  HousingDataTrain.csv
data/monitoring/: metrics.json  predictions.csv
mlops/: dvc.yaml  params.yaml
models/: model.joblib  model_info_train.json  scaler.joblib
src/: main.py
src/exploration/: eda_modeling.ipynb
src/mlops/: params.yaml  pipeline.py
src/repositories/: database_repository.py
src/schemas/: service_schemas.py
src/scripts/: evaluate.py  preprocess.py  train.py
tests/: api_test.py
