[project]
name = "housingml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc==3.63.0",
    "fastapi==0.118.0",
    "joblib==1.5.2",
    "mlflow==3.4.0",
    "pandas==2.3.3",
    "pydantic==2.11.10",
    "pytest==8.4.2",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "scipy>=1.16.2",
    "xgboost==3.0.5",
]

